TestSuite/PascalABCTests/errors/err0343_wrong_dynarr_rank.pas
begin
  var b: array [,] of byte := ((1, 2), 6, (5, 6)); 
  b.Println;
end.